--- a/An ventures final/project.html
+++ b/An ventures final/project.html
@@ -231,7 +231,7 @@
 
       <div class="card__body p-5">
         <span class="tag tag-brown">Outdoor Design</span>
-        <h4 class="text-white">Bedroom Design</h4>
+        <h4 class="text-white">Bedroom</h4>
 
       </div>
       <div class="card__footer">
