--- a/An ventures final/index.html
+++ b/An ventures final/index.html
@@ -149,8 +149,9 @@
         <div class="carousel-item active">
           <img src="22.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption  ">
-            <h1>First slide label</h1>
-            <p class="lead p-3">Some representative placeholder content for the first slide.</p>
+            <h1>DE ARTE</h1>
+            <p class="lead p-3">The interior expert
+              Interior Furnishing Company in India</p>
             <button class="button  text-center " style=" font-family: 'Montserrat' !important;  font-weight: bold;">GET
               A QUOTE</button>
           </div>
@@ -158,8 +159,9 @@
         <div class="carousel-item">
           <img src="33.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption">
-            <h1>Second slide label</h1>
-            <p class="lead p-3">Some representative placeholder content for the second slide.</p>
+            <h1>DE ARTE</h1>
+            <p class="lead p-3">The interior expert
+              Interior Furnishing Company in India</p>
             <button class="button  text-center  "
               style=" font-family: 'Montserrat' !important  ;  font-weight: bold;">GET A QUOTE</button>
           </div>
@@ -186,19 +188,19 @@
     <div class="box">
       <div class="img-area">
         <div class="img">
-          <img src="2.jpeg" alt="">
+          <img src="" alt="">
         </div>
-        <h1><img src="1.jpeg" alt=""></h1>
+        <h1><img src="10.jpeg" alt=""></h1>
       </div>
       <div class="form">
         <div class="close">&times;</div>
         <div>
           <h1 class="text-white  mon">Get Latest Offers</h1>
         </div>
-        <div class=" popupfont text-white mon">Get access to your Orders, Wishlist and Recommendations</div>
-        <div class=" mon pt-4"><a href="https://wa.me/918468088989"><button class="button ">Talk
-              to
-              US</button></a> </div>
+        <div class=" popupfont text-white mon">Planning to design interiors get our latest offers</div>
+        <div class=" mon pt-4"><a href="https://wa.me/918468088989"><button class="button "><i
+                class="fa fa-whatsapp p-1"></i>Connect on
+              What'sapp</button></a> </div>
 
       </div>
     </div>
