--- a/An ventures final/Gallery.html
+++ b/An ventures final/Gallery.html
@@ -36,8 +36,8 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav ms-5 mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link  text-white " aria-current="page" href="#"><i
-                class=" fa-solid fa-phone p-2 fontt text-white"></i>Call us :+91 9567135666</a>
+            <a class="nav-link  text-white " aria-current="page" href="tel:+91 9567145666"><i
+                class=" fa-solid fa-phone p-2 fontt text-white"></i>Call us :+91 9567135666,+91 9567145666</a>
           </li>
           <li class="nav-item "><a class="nav-link  text-white" href="#"><i
                 class="fa-solid fa-envelope p-2 fontt text-white"></i>Email us: info@anventures.co.in</a></li>
@@ -375,7 +375,7 @@
             <nav class="flex flex-col mt-6 space-y-1 text-gray-400">
               <a class="transition hover:text-white" href="/"> FAQs </a>
               <a class="transition hover:text-white" href="contact.html"> Contact </a>
-              <a class="transition hover:text-white" href="https://wa.me/918468088989"> Live Chat </a>
+              <a class="transition hover:text-white" href="https://wa.me/9567145666"> Live Chat </a>
             </nav>
           </div>
         </div>
@@ -386,7 +386,7 @@
   </footer>
 
   </section>
-  <a href="https://wa.me/918468088989" class="whatsapp_float m-3" target="_blank"> <i
+  <a href="https://wa.me/9567145666" class="whatsapp_float m-3" target="_blank"> <i
       class="fa-brands fa-whatsapp whatsapp-icon"></i></a>
 </body>
 <script src="jquery-3.6.0.js"></script>
