--- a/An ventures final/contact.html
+++ b/An ventures final/contact.html
@@ -396,8 +396,8 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav ms-5 mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link  text-white " aria-current="page" href="#"><i
-                class=" fa-solid fa-phone p-2 fontt text-white"></i>Call us :+91 9567135666</a>
+            <a class="nav-link  text-white " aria-current="page" href="tel:+91 9567145666"><i
+                class=" fa-solid fa-phone p-2 fontt text-white"></i>Call us :+91 9567135666,+91 9567145666</a>
           </li>
           <li class="nav-item "><a class="nav-link  text-white" href="#"><i
                 class="fa-solid fa-envelope p-2 fontt text-white"></i>Email us: info@anventures.co.in</a></li>
@@ -592,7 +592,7 @@
     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15781.874030130435!2d76.9168987!3d8.5508656!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x56a06bd02b5d03f0!2sAN%20VENTURES!5e0!3m2!1sen!2sin!4v1660974541869!5m2!1sen!2sin"
     width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
     referrerpolicy="no-referrer-when-downgrade"></iframe>
-  <a href="https://wa.me/918468088989" class="whatsapp_float m-3" target="_blank"> <i
+  <a href="https://wa.me/9567145666" class="whatsapp_float m-3" target="_blank"> <i
       class="fa-brands fa-whatsapp whatsapp-icon"></i></a>
   <footer class="bg-black">
     <div class="max-w-screen-xl px-4 pt-16 pb-8 mx-auto sm:px-6 lg:px-8">
@@ -698,7 +698,7 @@
             <nav class="flex flex-col mt-6 space-y-1 text-gray-400">
               <a class="transition hover:text-white" href="/"> FAQs </a>
               <a class="transition hover:text-white" href="contact.html"> Contact </a>
-              <a class="transition hover:text-white" href="https://wa.me/918468088989"> Live Chat </a>
+              <a class="transition hover:text-white" href="https://wa.me/9567145666"> Live Chat </a>
             </nav>
           </div>
         </div>
