--- a/An ventures final/index.html
+++ b/An ventures final/index.html
@@ -54,8 +54,8 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav ms-5 mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link  text-white " aria-current="page" href="#"><i
-                  class=" fa-solid fa-phone p-2 fontt text-white"></i>Call us :+91 9567135666</a>
+              <a class="nav-link  text-white " aria-current="page" href="tel:+91 9567145666"><i
+                  class=" fa-solid fa-phone p-2 fontt text-white"></i>Call us :+91 9567135666,+91 9567145666</a>
             </li>
             <li class="nav-item "><a class="nav-link  text-white" href="#"><i
                   class="fa-solid fa-envelope p-2 fontt text-white"></i>Email us: info@anventures.co.in</a></li>
@@ -152,8 +152,8 @@
             <h1>DE ARTE</h1>
             <p class="lead p-3">The interior expert
               Interior Furnishing Company in India</p>
-            <button class="button  text-center " style=" font-family: 'Montserrat' !important;  font-weight: bold;">GET
-              A QUOTE</button>
+            <a href=""> <button class="button  text-center  "
+                style=" font-family: 'Montserrat' !important  ;  font-weight: bold;">GET A QUOTE</button></a>
           </div>
         </div>
         <div class="carousel-item">
@@ -162,8 +162,8 @@
             <h1>DE ARTE</h1>
             <p class="lead p-3">The interior expert
               Interior Furnishing Company in India</p>
-            <button class="button  text-center  "
-              style=" font-family: 'Montserrat' !important  ;  font-weight: bold;">GET A QUOTE</button>
+            <a href=""> <button class="button  text-center  "
+                style=" font-family: 'Montserrat' !important  ;  font-weight: bold;">GET A QUOTE</button></a>
           </div>
         </div>
 
@@ -198,9 +198,9 @@
           <h1 class="text-white  mon">Get Latest Offers</h1>
         </div>
         <div class=" popupfont text-white mon">Planning to design interiors get our latest offers</div>
-        <div class=" mon pt-4"><a href="https://wa.me/918468088989"><button class="button "><i
+        <div class=" mon pt-4"><a href="https://wa.me/9567145666"><button class="button "><i
                 class="fa fa-whatsapp p-1"></i>Connect on
-              What'sapp</button></a> </div>
+              Whatsapp</button></a> </div>
 
       </div>
     </div>
@@ -579,10 +579,10 @@
           </strong>
 
           <nav class="flex flex-col mt-6 space-y-1 text-gray-400">
-            <a class="transition hover:text-white" href="/"> Kitchen </a>
-            <a class="transition hover:text-white" href="/"> Bedroom </a>
-            <a class="transition hover:text-white" href="/"> Kids Room </a>
-            <a class="transition hover:text-white" href="/"> Decorative Units </a>
+            <a class="transition hover:text-white" href="#"> Kitchen </a>
+            <a class="transition hover:text-white" href="#"> Bedroom </a>
+            <a class="transition hover:text-white" href="#"> Kids Room </a>
+            <a class="transition hover:text-white" href="#"> Decorative Units </a>
 
           </nav>
         </div>
@@ -604,9 +604,9 @@
           </strong>
 
           <nav class="flex flex-col mt-6 space-y-1 text-gray-400">
-            <a class="transition hover:text-white" href="/"> FAQs </a>
+            <a class="transition hover:text-white" href="#"> FAQs </a>
             <a class="transition hover:text-white" href="contact.html"> Contact </a>
-            <a class="transition hover:text-white" href="https://wa.me/918468088989"> Live Chat </a>
+            <a class="transition hover:text-white" href="https://wa.me/9567145666"> Live Chat </a>
           </nav>
         </div>
       </div>
@@ -617,7 +617,7 @@
 </footer>
 
 
-<a href="https://wa.me/918468088989" class="whatsapp_float m-3" target="_blank"> <i
+<a href="https://wa.me/9567145666" class="whatsapp_float m-3" target="_blank"> <i
     class="fa-brands fa-whatsapp whatsapp-icon"></i></a>
 <script src="jquery-3.6.0.js"></script>
 
