--- a/An ventures final/index.html
+++ b/An ventures final/index.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="lightbox.min.css">
+  <script type="text/javascript" src="lightbox-plus-jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -213,7 +215,7 @@
       </div>
       <div class="col-md-5 p-3 pt-5 text-white">
         <div class="container pt-3">
-        
+
           <div class="mon pb-2 wel1 ">We turn your dreams into reality</div>
           <div class="mon pb-4 wel2">At De Arte, we believe that the ideal home is a symphony of style, sophistication
             and
@@ -344,97 +346,89 @@
 
       <div class="gallery pt-3">
         <div class="gallery__column">
-          <a href="" target="_blank" class="gallery__link">
+          <a href="7.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb ">
               <img src="7.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Jessica Felicio</figcaption>
             </figure>
           </a>
 
-          <a href="" target="_blank" class="gallery__link">
+          <a href="8.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb">
               <img src="8.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Oladimeji Odunsi</figcaption>
             </figure>
           </a>
 
-          <a href="" target="_blank" class="gallery__link">
-            <figure class="gallery__thumb">
-              <img src="9.jpeg" alt="img" class="gallery__image">
-              <figcaption class="gallery__caption">Portrait by Alex Perez</figcaption>
-            </figure>
-          </a>
+
+
         </div>
 
         <div class="gallery__column">
-          <a href="" target="_blank" class="gallery__link">
+          <a href="10.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb">
               <img src="10.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Noah Buscher</figcaption>
             </figure>
           </a>
-
-          <a href="" target="_blank" class="gallery__link">
+          <a href="31.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb">
-              <img src="11.jpeg" alt="img" class="gallery__image">
+              <img src="31.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Ivana Cajina</figcaption>
             </figure>
           </a>
 
-          <a href="" target="_blank" class="gallery__link">
-            <figure class="gallery__thumb">
-              <img src="12.jpeg" alt="img" class="gallery__image">
-              <figcaption class="gallery__caption">Portrait by Sam Burriss</figcaption>
-            </figure>
-          </a>
+
+
+
         </div>
 
         <div class="gallery__column">
-          <a href="" target="_blank" class="gallery__link">
+          <a href="13.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb">
               <img src="13.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Mari Lezhava</figcaption>
             </figure>
           </a>
 
-          <a href="" target="_blank" class="gallery__link">
+          <a href="14.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb">
               <img src="14.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Ethan Haddox</figcaption>
             </figure>
           </a>
 
-          <a href="" target="_blank" class="gallery__link">
-            <figure class="gallery__thumb">
-              <img src="15.jpeg" alt="img" class="gallery__image">
-              <figcaption class="gallery__caption">Portrait by Amir Geshani</figcaption>
-            </figure>
-          </a>
+
+
         </div>
 
         <div class="gallery__column">
-          <a href="" target="_blank" class="gallery__link">
+          <a href="16.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb">
               <img src="16.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Guilian Fremaux</figcaption>
             </figure>
           </a>
 
-          <a href="" target="_blank" class="gallery__link">
+          <a href="17.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb">
               <img src="17.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Jasmin Chew</figcaption>
             </figure>
           </a>
 
-          <a href="" target="_blank" class="gallery__link">
-            <figure class="gallery__thumb">
-              <img src="18.jpeg" alt="img" class="gallery__image">
-              <figcaption class="gallery__caption">Portrait by Dima DallAcqua</figcaption>
-            </figure>
-          </a>
+
+
         </div>
+
       </div>
+
+
+
+
+
+
+
 
 
 
