--- a/An ventures final/Gallery.html
+++ b/An ventures final/Gallery.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="lightbox.min.css">
+  <script type="text/javascript" src="lightbox-plus-jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -139,27 +141,27 @@
 
       <div class="gallery pt-3">
         <div class="gallery__column">
-          <a href="" target="_blank" class="gallery__link">
+          <a href="7.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb ">
               <img src="7.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Jessica Felicio</figcaption>
             </figure>
           </a>
 
-          <a href="" target="_blank" class="gallery__link">
+          <a href="8.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb">
               <img src="8.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Oladimeji Odunsi</figcaption>
             </figure>
           </a>
-          <a href="" target="_blank" class="gallery__link">
+          <a href="32.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb">
               <img src="32.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Oladimeji Odunsi</figcaption>
             </figure>
           </a>
 
-          <a href="" target="_blank" class="gallery__link">
+          <a href="9.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb">
               <img src="9.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Alex Perez</figcaption>
@@ -168,33 +170,33 @@
         </div>
 
         <div class="gallery__column">
-          <a href="" target="_blank" class="gallery__link">
+          <a href="10.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb">
               <img src="10.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Noah Buscher</figcaption>
             </figure>
           </a>
-          <a href="" target="_blank" class="gallery__link">
+          <a href="31.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb">
               <img src="31.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Ivana Cajina</figcaption>
             </figure>
           </a>
 
-          <a href="" target="_blank" class="gallery__link">
+          <a href="11.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb">
               <img src="11.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Ivana Cajina</figcaption>
             </figure>
           </a>
 
-          <a href="" target="_blank" class="gallery__link">
+          <a href="12.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb">
               <img src="12.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Sam Burriss</figcaption>
             </figure>
           </a>
-          <a href="" target="_blank" class="gallery__link">
+          <a href="20.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb">
               <img src="20.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Sam Burriss</figcaption>
@@ -203,27 +205,27 @@
         </div>
 
         <div class="gallery__column">
-          <a href="" target="_blank" class="gallery__link">
+          <a href="13.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb">
               <img src="13.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Mari Lezhava</figcaption>
             </figure>
           </a>
 
-          <a href="" target="_blank" class="gallery__link">
+          <a href="14.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb">
               <img src="14.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Ethan Haddox</figcaption>
             </figure>
           </a>
-          <a href="" target="_blank" class="gallery__link">
+          <a href="14.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb">
               <img src="14.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Ethan Haddox</figcaption>
             </figure>
           </a>
 
-          <a href="" target="_blank" class="gallery__link">
+          <a href="15.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb">
               <img src="15.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Amir Geshani</figcaption>
@@ -232,27 +234,27 @@
         </div>
 
         <div class="gallery__column">
-          <a href="" target="_blank" class="gallery__link">
+          <a href="16.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb">
               <img src="16.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Guilian Fremaux</figcaption>
             </figure>
           </a>
 
-          <a href="" target="_blank" class="gallery__link">
+          <a href="17.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb">
               <img src="17.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Jasmin Chew</figcaption>
             </figure>
           </a>
 
-          <a href="" target="_blank" class="gallery__link">
+          <a href="18.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb">
               <img src="18.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Dima DallAcqua</figcaption>
             </figure>
           </a>
-          <a href="" target="_blank" class="gallery__link">
+          <a href="19.jpeg" data-lightbox="mygallery" class="gallery__link">
             <figure class="gallery__thumb">
               <img src="19.jpeg" alt="img" class="gallery__image">
               <figcaption class="gallery__caption">Portrait by Dima DallAcqua</figcaption>
@@ -306,7 +308,7 @@
 
           <div class="flex justify-center gap-4 mt-6 text-gray-300 lg:justify-start">
             <a class="transition hover:opacity-75" href="https://www.facebook.com/profile.php?id=100075845723789"
-              target="_blank" rel="noreferrer">
+              rel="noreferrer">
               <span class="sr-only"> Facebook </span>
 
               <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
@@ -316,8 +318,7 @@
               </svg>
             </a>
 
-            <a class="transition hover:opacity-75" href="https://www.instagram.com/dearte_tvm/" target="_blank"
-              rel="noreferrer">
+            <a class="transition hover:opacity-75" href="https://www.instagram.com/dearte_tvm/" rel="noreferrer">
               <span class="sr-only"> Instagram </span>
 
               <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
